Open file and closed file

--- a/src/main/resources/kompas.properties
+++ b/src/main/resources/kompas.properties
@@ -1,2 +1,4 @@
+kompas.api5.version = KOMPAS.Application.5
+kompas.api7.version = ksGetApplication7
 kompas.window.visible = false
 kompas.messages.visible = false
