--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,12 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>19.0</version>
+            <version>21.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna-platform</artifactId>
+            <version>4.3.0</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
